Worked on improving the weapons system and other factors