@@ -4,22 +4,28 @@ import me.luckyraven.Gangland;
 import me.luckyraven.command.CommandHandler;
 import me.luckyraven.command.CommandManager;
 import me.luckyraven.command.argument.Argument;
+import me.luckyraven.command.data.CommandInformation;
 import org.bukkit.command.CommandSender;
 
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.List;
 
 public final class HelpCommand extends CommandHandler {
 
 	public HelpCommand(Gangland gangland) {
 		super(gangland, "help", false, "general", "?");
-		getHelpInfo().add(getCommandInformation("general"));
-		getHelpInfo().add(getCommandInformation("general_page"));
 
-		getHelpInfo().addAll(CommandManager.getCommands()
-										   .values()
-										   .parallelStream()
-										   .flatMap(entry -> entry.getHelpInfo().getList().stream())
-										   .collect(Collectors.toList()));
+		List<CommandInformation> list = new ArrayList<>();
+
+		list.add(getCommandInformation("general"));
+		list.add(getCommandInformation("general_page"));
+		list.addAll(CommandManager.getCommands()
+								  .values()
+								  .parallelStream()
+								  .flatMap(entry -> entry.getHelpInfo().getList().stream())
+								  .toList());
+
+		getHelpInfo().addAll(list);
 	}
 
 	@Override
